# pybind11_examples

./: .gitmodules  DataSetGenerator.py  LICENSE  README.md  conda.md  deep_nn_n_hidden_layers_tf.py  logistic_regression_tf.py
pybind11_examples/: README.md
pybind11_examples/01_py-list_cpp-vector/: CMakeLists.txt  example.cpp  test.py
pybind11_examples/12-opencv-linking/: CMakeLists.txt  build.sh  example.cpp  install.sh  test.py
tensorflow/: deep_nn_n_hidden_layers_tf.py
